--- a/driton.html
+++ b/driton.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Page</title>
+    <title>Driton file</title>
   </head>
   <body>
-    <h1>about i ndryshuar</h1>
+    <h1>File i krijuar nga Dritoni</h1>
     <h2>ndryshimet e radhes</h2>
   </body>
 </html>
