--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+    <script src="./scripts/main.js"></script>
   </head>
   <body>
-    Home
+    <form action="" id="forma">
+      <input type="text" name="fname" id="fname" placeholder="First Name" />
+      <input type="text" name="lname" id="lname" placeholder="Last Name" />
+      <input type="email" name="email" id="email" placeholder="Email" />
+      <input
+        type="password"
+        name="password"
+        id="password"
+        placeholder="Password"
+      />
+      <button type="submit">Submit</button>
+      <p class="error" style="color: red"></p>
+    </form>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
